Services: finilyse http service, add navigation service, global config etc.

--- a/LinkPreviewApp/LinkPreviewApp.csproj
+++ b/LinkPreviewApp/LinkPreviewApp.csproj
@@ -60,11 +60,19 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Features\" />
-	  <Folder Include="Init\" />
+	  <Compile Update="Features\LinkPreview\Views\LinkPreviewView.xaml.cs">
+	    <DependentUpon>LinkPreviewView.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Features\LinkPreview\Views\LinkPreviewView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
